fixed some issues:
-added color to button component so text displays properly
-removed an issue with text overlaping the navbar

--- a/src/components/button/style.css
+++ b/src/components/button/style.css
@@ -3,6 +3,8 @@
   font-weight: bold;
   font-size: 30px;
 
+  color: var(--background-color);
+
   padding: 5px 25px 5px 25px;
 
   background-color: var(--main-theme-color);
